MODUSERS-531: Fix issues when with bulk operation custom field cannot be removed